@@ -41,6 +41,7 @@
  + Background color for custom maps added
  ~ Freemap.sk maps updated and changed
  + New atlas format: Maplorer
+ + New map source: Yahoo Taiwan
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
